--- a/markup/dashboard.html
+++ b/markup/dashboard.html
@@ -65,8 +65,8 @@
 					<li class="active">
 						<a><span class="icon-list"></span>listings <span class="badge">134</span></a>
 						<ul class="sub-links">
-							<li><a href="#"><span class="icon-clothes-tag"></span> for sale <span class="badge small">34</span></a></li>
-							<li><a href="#"><span class="icon-rent"></span> for rent <span class="badge small">99</span></a></li>
+							<li><a href="#"><span class="icon-clothes-tag"></span><span class="onlyText">for sale</span><span class="badge small">34</span></a></li>
+							<li><a href="#"><span class="icon-rent"></span><span class="onlyText">for rent</span><span class="badge small">99</span></a></li>
 						</ul>
 					</li>
 					<li><a href="#"><span class="icon-favourites-filled-star-symbol"></span>favorites<span class="badge">346</span></a></li>
@@ -254,9 +254,9 @@
                                 <div class="layout-holder">
                                     <span class="title">Price:</span>
                                     <div class="input-holder">
-                                        <input type="number" name="price" ng-model="form.data.price" placeholder="Please enter your price">
+                                        <input type="number" class="PriceField" name="price" ng-model="form.data.price" placeholder="Please enter your price">
                                         <span class="error-text">This is error</span>
-                                        <span class="calculatedPrice"></span>
+                                        <span class="calculatedPrice">Please enter the price</span>
                                     </div>
                                 </div>
                                 <div class="layout-holder">
@@ -1104,7 +1104,7 @@
                     <div class="listing-cetegories-links">
                         <ul class="navFor-mobile">
                             <li class="active">
-                                <span class="tag">For Sale</span>
+                                <span class="tag"></span>
                                 <a class="slide-onMobile-opener">
                                     <strong class="active">active <span class="numbering">999+</span></strong>
                                 </a>
