--- a/markup/dashboard.html
+++ b/markup/dashboard.html
@@ -18,7 +18,9 @@
 		<header id="header">
 			<a href="#" class="logo">P<span class="hidden-xs">roperty</span>42</a>
 			<a class="sideBar-opener"><span></span></a>
-            <span class="our-contactNum"><a href="#">Property42.pk</a></span>
+            <span class="our-contactNum">
+                <a href="#"><span class="icon-home-button"></span><span class="hidden-xs">Property42.pk</span></a>
+            </span>
 			<a href="#" class="logout" title="Logout"><span class="icon-logout"></span> <span class="hidden-xs">Logout</span></a>
 			<a href="#" class="add-property"><span class="hidden-xs">Add a</span> property</a>
 			<div class="searhForm-holder">
@@ -75,6 +77,7 @@
 					<li><a href="#"><span class="icon-user2"></span>My profile</a></li>
                     <li><a href="#"><span class="icon-key"></span>Change Password</a></li>
                     <li><a href="#"><span class="icon-search"></span>Advanced Search</a></li>
+                    <li><a href="#"><span class="icon-logout"></span>Logout</a></li>
 				</ul>
                 <form class="contact popup-holder">
                     <h2>Feedback</h2>
